# Robotics-Mini-Project

./: LICENSE  arm.rviz  package.xml  setup.cfg  setup.py
arm_delivery_project/: delivery_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: complete_test.launch.py  simple_test.launch.py  view_arm.launch.py
log/: latest_build
rviz/: arm.rviz  arm_config.rviz
urdf/: arm.urdf
