<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_delivery_project</name>
  <version>1.0.0</version>
  <description>ROS 2 package for simulating a delivery robot arm using RViz and Python-based nodes</description>

  <maintainer email="abuthwahir@roboticslab.com">Abuthwahir M</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/abuthwahir/arm_delivery_project</url>
  <url type="bugtracker">https://github.com/abuthwahir/arm_delivery_project/issues</url>
  <url type="repository">https://github.com/abuthwahir/arm_delivery_project.git</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <architecture_independent>true</architecture_independent>
  </export>
</package>
